cấu hình lại các router và swagger
