# api/v1/routes/tourCategory.route.ts
@@ -2,15 +2,27 @@ import express, { Router } from "express";
 const router = express.Router();
 import * as tourCategoriesController from "../controller/tourCategory/tourCategory.controller";
 
+//root
 router.get("/", tourCategoriesController.index);
 router.post("/create", tourCategoriesController.createTourCategory);
-router.get("/:slugTopicTour", tourCategoriesController.listTourCategory);
-router.get("/:slugTopicTour/:slugTour", tourCategoriesController.listTourTopic);
+router.patch("/edit/:id", tourCategoriesController.updateTourCategory);
+router.patch("/delete/:id", tourCategoriesController.deleteTourCategory);
+router.patch("/bulk", tourCategoriesController.bulkUpdateTourCategories);
+//end root
+
+//topic
+router.get("/:slugTopicTour", tourCategoriesController.listTourTopic);
+
 router.post("/:slugTopicTour/create", tourCategoriesController.createTopicTour);
 router.patch(
-  "/:slugTopicTour/:slugTour",
+  "/:slugTopicTour/edit/:id",
   tourCategoriesController.updateTopicTour
 );
+//end topic
+
+//tour
+router.get("/:slugTopicTour/:slugTour", tourCategoriesController.listTour);
+//end tour
 
 const tourCategoryRouter: Router = router;
 export { tourCategoryRouter };
